# rsomics-vcf-sample

./: Cargo.toml
.github/workflows/: ci.yml
benches/: bench.rs  vcf_sample.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: input.vcf
