[package]
name = "rsomics-vcf-sample"
version = "0.1.0"
description = "Random subsample VCF variants by fraction or exact count — bcftools view subsample equivalent"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-vcf-sample"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["vcf", "subsample", "bioinformatics", "bcftools", "variants"]

[[bin]]
name = "rsomics-vcf-sample"
path = "src/main.rs"

[lib]
name = "rsomics_vcf_sample"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
rand = { version = "0.9", features = ["small_rng"] }

[dev-dependencies]
tempfile = "3"
